--- a/gb/17/12/17/n9965158.md
+++ b/gb/17/12/17/n9965158.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qtfwow338/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qtfwow338/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qtfwow338/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qtfwow338/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“家庭礼包”计划启动 旨在减少贫困儿童</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/12/GettyImages-457462682-600x400.jpg" />
 <h6>财政部长格兰特?罗伯特森（Grant Robertson）和总理嘉欣达.阿丹(Hannah Peters/Getty Images)
 </h6>
 <hr>
 <p>【大纪元2017年12月17日讯】（大纪元记者李扪心综合报导）距圣诞节还有10天的时间，政府隆重打开了圣诞大礼包，给带小孩的中低收入家庭，以及那些领取社会福利金和养老金的民众更多资助，希望借此提升贫困家庭生活品质，减少生活贫困的儿童数量。</p>
-<p>本周四，财政部长格兰特?罗伯特森（Grant Robertson），发布了工党-优先党-绿党上台以来第一个“小型预算案”，全面推出“<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E5%AE%B6%E5%BA%AD%E7%A4%BC%E5%8C%85.md#1">家庭礼包</a>”计划。这项计划既是工党最重要的大选承诺，也是新政府“百日工作计划”的主要部分。</p>
-<p>“<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E5%AE%B6%E5%BA%AD%E7%A4%BC%E5%8C%85.md#1">家庭礼包</a>”计划将在明年7月1日开始实行，取代上届国家党政府预定在相同时间开始实行的减税计划。</p>
-<p>在“家庭礼包”计划下，到2021年大约38万4千个<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>家庭，每周将获得额外的75元收入，另外36万5千家庭每周将多得39元，还有65万个家庭每周多得14元，总共将有140万个家庭受益。</p>
+<p>本周四，财政部长格兰特?罗伯特森（Grant Robertson），发布了工党-优先党-绿党上台以来第一个“小型预算案”，全面推出“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%AE%B6%E5%BA%AD%E7%A4%BC%E5%8C%85.md#1">家庭礼包</a>”计划。这项计划既是工党最重要的大选承诺，也是新政府“百日工作计划”的主要部分。</p>
+<p>“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%AE%B6%E5%BA%AD%E7%A4%BC%E5%8C%85.md#1">家庭礼包</a>”计划将在明年7月1日开始实行，取代上届国家党政府预定在相同时间开始实行的减税计划。</p>
+<p>在“家庭礼包”计划下，到2021年大约38万4千个<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>家庭，每周将获得额外的75元收入，另外36万5千家庭每周将多得39元，还有65万个家庭每周多得14元，总共将有140万个家庭受益。</p>
 <p>这项计划的实施，还可使8万8千名儿童脱离贫困，也就是说，他们的家庭支出将高于家庭收入中间值（约4万8千元）的60%——即除了房屋花费外，每年家庭支出高于2万8800元。</p>
 <p>工党的“家庭礼包”是要在未来4年里，斥资20亿元，在保健、教育、房屋等多方面资助带小孩的贫困家庭。“家庭礼包”计划主要包括：</p>
 <p>&#8211; 加强对现存“家庭礼包”家庭的资助，并扩大资助范围给3万多个家庭。一个家庭最大小孩（小于18岁）可得的税务补贴提高到每年5878元（每周113元）；<br />
@@ -17,11 +17,11 @@
 &#8211; 引进“冬天能源补助”（Winter Energy Payment），给那些领取养老金和主要福利金的人取暖补贴，单身者每年可获得450元，夫妇或带小孩者可获得700元，将有100万人受益；<br />
 &#8211; 重启“独立工作者退税”（Independent Earners’ Tax Credit）计划，即给年收入在2万4千元到4万8千元的低收入者税务补贴，每年最高520元（每周10元）；这正好弥补了国家党政府的每周10元减税，但对于那些年收入高于5万2千元的单身工作者，将错过国家党政府承诺的每周20元减税收入。<br />
 &#8211; 与抚养小孩有关的补贴，将每周多得20.31元。</p>
-<p>在这项预算案之前，政府已经公布了高等教育和培训的免费计划、延长父母带薪产假至26周的计划、注资20亿元给Kiwibuild建房计划作启动资金，以及重新开始给<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>养老基金注资等等。</p>
+<p>在这项预算案之前，政府已经公布了高等教育和培训的免费计划、延长父母带薪产假至26周的计划、注资20亿元给Kiwibuild建房计划作启动资金，以及重新开始给<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>养老基金注资等等。</p>
 <p><strong>钱从哪来？ 怎么花？</strong></p>
 <p>工党在大选中就承诺，如果当政，政府将给予中低收入家庭以补贴，并给出预算数额。在这次的预算案中，全部的家庭礼包计划，在未来的4年中，共需要支出55.3亿元，而取消原国家党政府的减税计划一项，就将节省83.6亿元。所以即使比原计划超出7亿元，仍有28.3亿元余付。</p>
-<p>按照国际慈善机构UNICEF的数字，新西兰需要花在处理<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E8%B4%AB%E5%9B%B0%E5%84%BF%E7%AB%A5.md#1">贫困儿童</a>问题上的公共资金。每年高达100亿元。这个机构引述独立研究报告说，生活在贫困家庭的儿童，面临更多健康压力，而那些遭到虐待的儿童，长大后都有心理健康问题，也更容易犯罪，单单他们在法律方面的花费，每年就高达20亿元。</p>
-<p><strong>两党合作 共同减少<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E8%B4%AB%E5%9B%B0%E5%84%BF%E7%AB%A5.md#1">贫困儿童</a>数量？</strong></p>
+<p>按照国际慈善机构UNICEF的数字，新西兰需要花在处理<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%B4%AB%E5%9B%B0%E5%84%BF%E7%AB%A5.md#1">贫困儿童</a>问题上的公共资金。每年高达100亿元。这个机构引述独立研究报告说，生活在贫困家庭的儿童，面临更多健康压力，而那些遭到虐待的儿童，长大后都有心理健康问题，也更容易犯罪，单单他们在法律方面的花费，每年就高达20亿元。</p>
+<p><strong>两党合作 共同减少<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%B4%AB%E5%9B%B0%E5%84%BF%E7%AB%A5.md#1">贫困儿童</a>数量？</strong></p>
 <p>在本周初内阁会议后的新闻发布会上，总理嘉欣达?阿丹（Jacinda Ardern）透露，她希望与反对党国家党合作，让两大党求同存异、同心协力，减少新西兰贫困儿童数量。工党已经就此设立了明确的目标。</p>
 <p>阿丹说，她预计，国家党在减少贫困儿童问题上已经设立了不同的目标、并有达成这个目标的方法。她已经写信给国家党党魁比尔?英格利希（Bill English），为设立一个长期的、法定的目标寻求支持，并呼吁“把政治从贫困中拿出去” 。</p>
 <p>英格利希说，是否同意就此进行两党合作，将取决于工党是否有一个具体、坚实的计划。他表示，“如果他们要设立减少贫困儿童的目标，政府必须表明会真正地达成这些目标”。</p>
@@ -56,47 +56,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/17/12/12/n9951135.md#1">在美渗透 “中共的长臂”引华府关注（上）</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/17/12/12/n9951237.md#1">北京上演“排华”潮 白领阶层也遭驱逐</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/17/12/12/n9951332.md#1">新闻看点：德国等四国指控中共渗透 美国跟进</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/17/12/13/n9951588.md#1">在美渗透 “中共的长臂”引华府关注（下）</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/17/12/13/n9954839.md#1">外媒：五眼联盟会议 中共干涉引关注</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/17/12/14/n9955622.md#1">美国会听证会审查中共“长臂”酝酿回击方式</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/17/12/15/n9959573.md#1">面对“推翻自由党”的鼓动 澳华人怎么看？</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/17/12/15/n9960262.md#1">中国代购需求旺盛 专家促澳公司勿失商机</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/27/n13608744.md#1">大卫·西摩呼吁取消强制防疫措施</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/27/n13608723.md#1">奥克兰Domain因抗议者露营暂停机动车通行</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/12/12/n9951135.md#1">在美渗透 “中共的长臂”引华府关注（上）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/12/12/n9951237.md#1">北京上演“排华”潮 白领阶层也遭驱逐</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/12/12/n9951332.md#1">新闻看点：德国等四国指控中共渗透 美国跟进</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/12/13/n9951588.md#1">在美渗透 “中共的长臂”引华府关注（下）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/12/13/n9954839.md#1">外媒：五眼联盟会议 中共干涉引关注</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/12/14/n9955622.md#1">美国会听证会审查中共“长臂”酝酿回击方式</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/12/15/n9959573.md#1">面对“推翻自由党”的鼓动 澳华人怎么看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/12/15/n9960262.md#1">中国代购需求旺盛 专家促澳公司勿失商机</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691514.md#1">若执政 行动党承诺冻结最低薪 取消新福利</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691502.md#1">目前新西兰各党税收政策一览</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/29/n11148760.md#1" target="_blank">林辉：抗战时毒杀日外交官 英雄难逃中共毒手</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/8/10/n3655834.md#1" target="_blank">王华：闲谈西方的签名与东方的手印</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/9/n10899776.md#1" target="_blank">林辉：姚依林回忆“一二九运动”证实三件事</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/26/n10875809.md#1" target="_blank">曝光610文件 宗教权威人谴中共打压法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/3/n13553506.md#1">【未解之谜】梅辛传之三：希特勒的预言</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/1/27/n13533579.md#1">唐朝皇族后裔的教训 德性有亏一夕化虎</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/26/n13607630.md#1">【菁英论坛】韩大选撬动东亚格局 专家忧选举舞弊</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/26/n13606496.md#1">【军事热点】北约加强东翼兵力 应对俄罗斯入侵</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/26/n13606937.md#1">【马克时空】乌克兰抗俄 刺针、标枪、NLAW导弹立战功</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/25/n13605758.md#1">应对俄乌开战 北约反应部队启动 史上首次</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/25/n13605474.md#1">消息：美与北京分享俄入侵情报 中共向俄泄密</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13602961.md#1">产后10天俄乌开战 瑞莎焦虑乌克兰亲人全失联</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13603338.md#1">酒店隔离与好友成邻居 舒淇：巧到不能再巧</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/25/n13604262.md#1">西恩潘“人在乌克兰” 挺进战地拍入侵纪录片</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13602100.md#1">世界各地的长寿人群都吃些什么食物？</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/18/n13586671.md#1">不吃早餐糖尿病风险增40％ 3组早餐养胃强身</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13602281.md#1">金盏花对皮肤很好 还能消炎止痛、促伤口愈合</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13602257.md#1">早期胃癌难发现 八个症状需警惕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qtfwow338/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qtfwow338/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/12/17/n9965158.htm">“家庭礼包”计划启动 旨在减少贫困儿童</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/12/17/n9965158.htm">“家庭礼包”计划启动 旨在减少贫困儿童</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/qtfwow338/djy/blob/master/gb/17/12/17/n9965158.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qtfwow338/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qtfwow338/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qtfwow338/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/17/12/17/n9965158.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
